# AI_self_explain

./: .env.example  .gitignore  AGENTS.md  ASRexample.py  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260720_01_create_questions_table.py  20260720_02_add_question_archived_at.py  20260720_03_create_session_tables.py  20260720_04_add_ai_evaluation_records.py  20260721_05_create_support_events.py  20260721_06_add_guided_support_state.py  20260721_07_add_question_guided_questions.py  20260721_08_add_realtime_asr_audio_files.py  20260721_09_add_request_id_to_external_calls.py  20260722_10_create_users_and_auth_sessions.py  20260722_11_add_user_role_constraint.py  20260722_12_create_student_submissions.py
backend/app/: __init__.py  main.py
backend/app/api/: audit.py  auth.py  health.py  questions.py  sessions.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  ai_evaluation.py  audio_file.py  auth_session.py  explanation_attempt.py  external_call_record.py  question.py  session.py  state_transition_event.py  student_submission.py  support_event.py  user.py
backend/app/prompts/: assess_guided_answers.md  evaluate_explanation.md  generate_support.md
backend/app/repositories/: __init__.py  questions.py  sessions.py
backend/app/rules/: __init__.py  session_lifecycle.py  teaching_cycle.py
backend/app/schemas/: __init__.py  ai_evaluation.py  audit.py  auth.py  question.py  session.py  support.py
backend/tests/: conftest.py
docs/: 00-需求与Demo范围.md  口述需求.md  (+2 more)
(+68 files in other folders)
