[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-self-explain-backend"
version = "0.1.0"
description = "AI 自讲 Demo 后端"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14,<2",
    "dashscope>=1.26.4,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.7,<3",
    "python-json-logger>=3.2,<4",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
